--- a/_sass/template/components/_component--breadcrumbs.scss
+++ b/_sass/template/components/_component--breadcrumbs.scss
@@ -26,8 +26,8 @@
 
 .theme--cyan #breadcrumbs,
 .theme--cyan #breadcrumbs a {
-	color: color(blue, XXXXX);
-	text-decoration-color: color(blue, XXX);
+	color: color(neutral, X);
+	text-decoration-color: color(blue, XX);
 }
 
 
